--- a/DA_BA_vacancy_analysis/README.me
+++ b/DA_BA_vacancy_analysis/README.me
@@ -1,11 +1,11 @@
-# Анализ вакансий рынка труда для Аналитика данных и Бизнес аналитика
+# h1 Анализ вакансий рынка труда для Аналитика данных и Бизнес аналитика
 
-## Описание проекта
+## h2 Описание проекта
 Провести анализ базы вакансий hh.ru и выявить различия в предлагаемых вакансия Аналитик данных и Бизнес аналитик
 определить наиболее желаемых кандидатов на вакансии и типичное место работы кандидатов по категориям Junior, Junior+, Middle и Senior
 
-## Навыки и инструменты
-*pandas, plotly*
+## h2 Навыки и инструменты
+**pandas**, **plotly**
 
-## Dsdjls
+## h2 Выводы
 Проведена исследовательская работа по обработке и анализу данных вакансий, определеные наиболее желаемые кандидаты и их навыки, определено типичное место работы Аналитика данных и Бизнес аналитика, приведены рекомендации при поиске работы.
